<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".main_function.GraphActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_radius_10dp"
        android:backgroundTint="@color/theme2"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/box_radius_10dp"
                android:backgroundTint="@color/white"
                android:spinnerMode="dropdown"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:background="@drawable/box_radius_10dp"
                android:backgroundTint="@color/white"
                android:spinnerMode="dropdown"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical"
            android:background="@drawable/box_radius_10dp"
            android:backgroundTint="@color/theme2">

            <com.skydoves.progressview.ProgressView
                android:id="@+id/pv_calorie"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:progressView_autoAnimate="true"
                app:progressView_progressFromPrevious="true"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="#54FD66"
                app:progressView_labelSize="12sp"
                app:progressView_labelSpace="10dp"
                app:progressView_labelTypeface="bold"
                app:progressView_labelText="@string/calorie"
                app:progressView_max="300"
                app:progressView_min="0"
                app:progressView_padding="1dp"
                app:progressView_radius="12dp" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/pv_carbohydrates"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginTop="10dp"
                app:progressView_autoAnimate="true"
                app:progressView_progressFromPrevious="true"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="#54FD66"
                app:progressView_labelSize="12sp"
                app:progressView_labelSpace="10dp"
                app:progressView_labelTypeface="bold"
                app:progressView_labelText="@string/carbohydrate"
                app:progressView_max="300"
                app:progressView_min="0"
                app:progressView_padding="1dp"
                app:progressView_radius="12dp" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/pv_proteins"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginTop="10dp"
                app:progressView_autoAnimate="true"
                app:progressView_progressFromPrevious="true"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="#54FD66"
                app:progressView_labelSize="12sp"
                app:progressView_labelSpace="10dp"
                app:progressView_labelTypeface="bold"
                app:progressView_labelText="@string/protein"
                app:progressView_max="300"
                app:progressView_min="0"
                app:progressView_padding="1dp"
                app:progressView_radius="12dp" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/pv_fat"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginTop="10dp"
                app:progressView_autoAnimate="true"
                app:progressView_progressFromPrevious="true"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="#54FD66"
                app:progressView_labelSize="12sp"
                app:progressView_labelSpace="10dp"
                app:progressView_labelTypeface="bold"
                app:progressView_labelText="@string/fat"
                app:progressView_max="300"
                app:progressView_min="0"
                app:progressView_padding="1dp"
                app:progressView_radius="12dp" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/pv_trans_fat"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginTop="10dp"
                app:progressView_autoAnimate="true"
                app:progressView_progressFromPrevious="true"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="#54FD66"
                app:progressView_labelSize="12sp"
                app:progressView_labelSpace="10dp"
                app:progressView_labelTypeface="bold"
                app:progressView_labelText="@string/trans_fat"
                app:progressView_max="300"
                app:progressView_min="0"
                app:progressView_padding="1dp"
                app:progressView_radius="12dp" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/pv_saturated_fat"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginTop="10dp"
                app:progressView_autoAnimate="true"
                app:progressView_progressFromPrevious="true"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="#54FD66"
                app:progressView_labelSize="12sp"
                app:progressView_labelSpace="10dp"
                app:progressView_labelTypeface="bold"
                app:progressView_labelText="@string/saturated_fat"
                app:progressView_max="300"
                app:progressView_min="0"
                app:progressView_padding="1dp"
                app:progressView_radius="12dp" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/pv_cholesterol"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginTop="10dp"
                app:progressView_autoAnimate="true"
                app:progressView_progressFromPrevious="true"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="#54FD66"
                app:progressView_labelSize="12sp"
                app:progressView_labelSpace="10dp"
                app:progressView_labelTypeface="bold"
                app:progressView_labelText="@string/cholesterol"
                app:progressView_max="300"
                app:progressView_min="0"
                app:progressView_padding="1dp"
                app:progressView_radius="12dp" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/pv_sugar"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginTop="10dp"
                app:progressView_autoAnimate="true"
                app:progressView_progressFromPrevious="true"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="#54FD66"
                app:progressView_labelSize="12sp"
                app:progressView_labelSpace="10dp"
                app:progressView_labelTypeface="bold"
                app:progressView_labelText="@string/sugar"
                app:progressView_max="300"
                app:progressView_min="0"
                app:progressView_padding="1dp"
                app:progressView_radius="12dp" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/pv_sodium"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginTop="10dp"
                app:progressView_autoAnimate="true"
                app:progressView_progressFromPrevious="true"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="#54FD66"
                app:progressView_labelSize="12sp"
                app:progressView_labelSpace="10dp"
                app:progressView_labelTypeface="bold"
                app:progressView_labelText="@string/sodium"
                app:progressView_max="300"
                app:progressView_min="0"
                app:progressView_padding="1dp"
                app:progressView_radius="12dp" />
        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="300dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/box_radius_10dp"
        android:backgroundTint="@color/light_purple" />


</LinearLayout>