<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main_function.SolutionActivity">

    <LinearLayout
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/box_radius_bottom_20dp"
        android:backgroundTint="@color/red"
        android:elevation="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingVertical="20dp"
            android:paddingStart="20dp"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/registrationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/goodgun"
            android:paddingVertical="20dp"
            android:paddingStart="10dp"
            android:text="국건 솔루션"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/good_gun_no_bg"
            app:tint="@color/white" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="최근 영양 정보"
                android:fontFamily="@font/goodgun"
                android:textColor="@color/extra_grey"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"  />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TableRow>

                    <LinearLayout
                        style="@style/SolutionStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/foodTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/carbohydrate2" />

                        <TextView
                            android:id="@+id/tv_food_carbo"
                            style="@style/SolutionText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>


                    <LinearLayout
                        style="@style/SolutionStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/foodTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/protein2" />

                        <TextView
                            android:id="@+id/tv_food_protein"
                            style="@style/SolutionText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/SolutionStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/foodTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fat2" />

                        <TextView
                            android:id="@+id/tv_food_fat"
                            style="@style/SolutionText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/SolutionStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/foodTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sugar2" />

                        <TextView
                            android:id="@+id/tv_food_sugar"
                            style="@style/SolutionText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </TableRow>

                <TableRow android:layout_marginTop="10dp">


                    <LinearLayout
                        style="@style/SolutionStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/foodTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/trans_fat2" />

                        <TextView
                            android:id="@+id/tv_food_trans"
                            style="@style/SolutionText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/SolutionStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/foodTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/saturated_fat2" />

                        <TextView
                            android:id="@+id/tv_food_saturated"
                            style="@style/SolutionText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/SolutionStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/foodTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cholesterol2" />

                        <TextView
                            android:id="@+id/tv_food_cholesterol"
                            style="@style/SolutionText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/SolutionStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/foodTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sodium2" />

                        <TextView
                            android:id="@+id/tv_food_sodium"
                            style="@style/SolutionText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </TableRow>

            </TableLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="솔루션"
                android:fontFamily="@font/goodgun"
                android:textColor="@color/extra_grey"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_solution"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/indicator"
                app:layout_constraintTop_toBottomOf="@id/tv_title"/>

            <com.hellmund.viewpager2indicator.ViewPager2Indicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:radius="4dp"
                app:selectedFillColor="@color/red"
                app:spacing="8dp"
                app:unselectedFillColor="@color/bright_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>